# Bookstore

./: .gitignore  LICENSE  README.md  cookie.txt  pom.xml
scripts/base16-schemes-dl/: README.md  main.py  pyproject.toml
scripts/genre-enum-maker/: README.md  main.py  pyproject.toml
src/main/resources/: application-dev.properties  application-prod.properties  application.properties
src/main/resources/db/changelog/: db.changelog-master.yml
src/main/resources/static/builtin-themes/: README.md  default-mangagamer.yml
src/main/resources/static/css/: book-review.css  book.css  create-theme.css  dropdown.css  error.css  generated-variables.css  index.css  pagination.css  profile-details.css  profile.css  register.css  search.css  style.css  theme.css  variables.css
src/main/resources/static/js/: flip-cover.js  genre-expand.js  sidebar.js  sliding-banner.js  sync-input-fields-with-css-var.js  sync-input-fields.js
src/main/resources/templates/: book-review.html  book.html  create-theme-confirm.html  create-theme-result.html  create-theme.html  error.html  index.html  profile-delete-result.html  profile-delete.html  profile-edit-confirm.html  profile-edit-result.html  profile-edit.html  profile-saved-books.html  profile-saved-themes.html  profile.html  register-confirm.html  register-result.html  register.html  search.html  theme.html
src/main/resources/templates/fragments/: book-review.html  book.html  create-theme.html  footer.html  header.html  main-content.html  pagination.html  profile-delete-result.html  search.html  (+17 more)
src/main/resources/themes/: mangagamer.yml
(+219 files in other folders)
