[project]
name = "genre-enum-maker"
version = "0.1.0"
description = "script to generate a java string enum from genres that normalizes names; e.g. ADVENTURE_ACTION_FICTION(\"Adventure & Action/Fiction\")"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
]
